--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ h3 {
 	border-bottom: 2px solid #efefef;
 
 }
-h4 {
+.linkport {
 	width: 270px;
 	height: 50px;
 	background: #4aaaa5;
@@ -46,9 +46,15 @@ h4 {
 	font-size: 1.2em;
 	margin-top: 178px;
 	padding-top: 7px;
+	text-decoration: none;
 }
-h1, h2, h3, h4 {
+h1, h2, h3, .linkport{
 	font-family: 'Georgia', Times, "Times New Roman", serif;
+
+}
+.linkport a{
+	text-decoration: none;
+	color: #ffffff;
 }
 header {
 	width: 100%;
